[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uedition-github-io"
version = "1.0"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Mark Hall", email = "mark.hall@work.room3b.eu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "uEdition>=0.3.0"
]

[project.urls]
Documentation = "https://uedition.github.io"
#Issues = "https://github.com/unknown/uedition-github-io//issues"
Source = "https://github.com/uEdition/uEdition.github.io"

[tool.hatch.envs.default.scripts]
build = "uEdition build"
serve = "uEdition serve"
