[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uedition-github-io"
description = 'The μEdition Github site'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Mark Hall", email = "mark.hall@work.room3b.eu" },
]
classifiers = []
dependencies = [
  "uedition>=0.7.0",
]
version = "1.0.0"

[project.urls]
Documentation = "https://github.com/uEdition/uEdition.github.io/-#readme"
Issues = "https://github.com/uEdition/uEdition.github.io/-/issues"
Source = "https://github.com/uEdition/uEdition.github.io/-"

[tool.hatch.envs.default.scripts]
build = "uEdition build {args}"
serve = "uEdition serve {args}"
update = "uEdition update {args}"
